# geh-electricity-market

./: .gitignore  .tool-versions  BalanceResponsiblePeriod.sql  CommercialRelation.sql  Contact.sql  ContactAddress.sql  Customer.sql  Directory.Build.props  Directory.Build.targets  ElectricalHeatingPeriod.sql  ElectricityMarket.sln  EnergySupplierPeriod.sql  InstallationAddress.sql  MeteringPoint.sql  MeteringPointPeriod.sql  README.md
.devcontainer/: Dockerfile
.devcontainer/geh_electricity_market/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/actions/dotnet-prepare-outputs/: action.yml
.github/actions/dotnet-tests-prepare-outputs/: action.yml
.github/workflows/: cd.yml  ci-dotnet.yml  ci-orchestrator.yml  detect-changes.yml  publish-electricity-market-integration-bundle.yml
docs/Energinet.DataHub.ElectricityMarket.Integration/: documentation.md
docs/Energinet.DataHub.ElectricityMarket.Integration/release-notes/: release-notes.md
source/electricity-market/DatabaseMigration/: DatabaseMigration.csproj  Program.cs  Upgrader.cs
source/electricity-market/ElectricityMarket.Application/: ApplicationAssemblyReference.cs  ElectricityMarket.Application.csproj
source/electricity-market/ElectricityMarket.DataApi/: ElectricityMarket.DataApi.csproj  Program.cs  settings.sample.json
source/electricity-market/ElectricityMarket.Domain/: DelegationPeriod.cs  ElectricityMarket.Domain.csproj
source/electricity-market/ElectricityMarket.Import/: ElectricityMarket.Import.csproj  Program.cs  host.json  settings.sample.json
source/electricity-market/ElectricityMarket.ImportOrchestrator/: ElectricityMarket.ImportOrchestrator.csproj  Program.cs  host.json  settings.sample.json
source/geh-electricity-market/: pyproject.toml
source/geh-electricity-market/src/geh_electricity_market/: __init__.py
source/geh-electricity-market/src/geh_electricity_market/database_migrations/: __init__.py  database_definitions.py  substitutions.py
source/geh-electricity-market/tests/: __init__.py  conftest.py
source/geh_electricity_market/: pyproject.toml
tools/: inmemimporter.ps1  run-scenario-tests.ps1
(+982 files in other folders)
