[project]
name = "geh-electricity-market"
version = "0.1.0"
description = "Allows table migrations to be executed against Databricks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geh_common @ git+https://git@github.com/Energinet-DataHub/opengeh-python-packages@geh_common_5.5.2#subdirectory=source/geh_common",
    "pydantic>=2.11.2",
    "pyspark>=3.5.5",
]

[project.scripts]
geh-electricity-market = "geh_electricity_market:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = ["pytest-cov>=6.0.0", "pytest>=8.3.4", "ruff>=0.9.1"]

[tool.pytest.ini_options]
# -s ensures that print("<text>") is written to output.
addopts = [
    "--import-mode=importlib",
    "--cov-report=term",
    "--cov-report=xml:coverage.xml",
    "--cov=geh_calculated_measurements",
    "-ra",
    "-vv",
    "-s",
    # pytest-xdist options
    "-n=auto",
    "--dist=load",
]

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff]
line-length = 120
show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
# See more here: https://docs.astral.sh/ruff/rules/
select = ["D", "D401", "E", "F", "I", "T201", "UP", "PT"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D106",
    "D107",
    "D417",
    "E501",
    "UP006",
    "UP007",
    "UP035",
]
exclude = ["notebooks/*"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"
